[gd_scene load_steps=22 format=3 uid="uid://dxnl4jurpfddl"]

[ext_resource type="Script" uid="uid://34cxhmcvug2m" path="res://entities/npc/npc_dummy.gd" id="1_wfx4m"]
[ext_resource type="PackedScene" uid="uid://btlcpec1pk0f4" path="res://entities/enemy/dummy.tscn" id="2_kfvlc"]
[ext_resource type="PackedScene" uid="uid://c6vlhijuot8ks" path="res://environment/dialogue_box.tscn" id="3_k0m3b"]
[ext_resource type="PackedScene" uid="uid://ebc4v13v0xiy" path="res://assets/ui/pointer.tscn" id="4_kfvlc"]
[ext_resource type="Script" uid="uid://ca88v61n8pibv" path="res://entities/npc/npc_dummy_interactable.gd" id="5_k0m3b"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_dwd6t"]
radius = 0.47802734
height = 2.4682617

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_wfx4m"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_k0m3b"]
animation = &"Sit_Chair_Down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_kr2yx"]
animation = &"Sit_Chair_Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_p43ok"]
animation = &"Sit_Chair_StandUp"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_kfvlc"]
animation = &"Walking_C"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_kfvlc"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_k0m3b"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_p43ok"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_r8m0f"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ixa2p"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wfx4m"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_o4qnk"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_kfvlc"]
states/End/position = Vector2(1039, 100)
states/Idle/node = SubResource("AnimationNodeAnimation_wfx4m")
states/Idle/position = Vector2(436, 100)
states/Sit_Chair_Down/node = SubResource("AnimationNodeAnimation_k0m3b")
states/Sit_Chair_Down/position = Vector2(436, 279)
states/Sit_Chair_Idle/node = SubResource("AnimationNodeAnimation_kr2yx")
states/Sit_Chair_Idle/position = Vector2(610, 279)
states/Sit_Chair_StandUp/node = SubResource("AnimationNodeAnimation_p43ok")
states/Sit_Chair_StandUp/position = Vector2(610, 189)
states/Walking_C/node = SubResource("AnimationNodeAnimation_kfvlc")
states/Walking_C/position = Vector2(624, 100)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_kfvlc"), "Idle", "Walking_C", SubResource("AnimationNodeStateMachineTransition_k0m3b"), "Idle", "Sit_Chair_Down", SubResource("AnimationNodeStateMachineTransition_p43ok"), "Sit_Chair_Down", "Sit_Chair_Idle", SubResource("AnimationNodeStateMachineTransition_r8m0f"), "Sit_Chair_Idle", "Sit_Chair_StandUp", SubResource("AnimationNodeStateMachineTransition_ixa2p"), "Sit_Chair_StandUp", "Idle", SubResource("AnimationNodeStateMachineTransition_wfx4m"), "Walking_C", "Idle", SubResource("AnimationNodeStateMachineTransition_o4qnk")]
graph_offset = Vector2(-94, 30)

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_k0m3b"]
graph_offset = Vector2(-448, 64)
nodes/MovementStateMachine/node = SubResource("AnimationNodeStateMachine_kfvlc")
nodes/MovementStateMachine/position = Vector2(-240, 140)
node_connections = [&"output", 0, &"MovementStateMachine"]

[sub_resource type="SphereShape3D" id="SphereShape3D_svb3k"]
radius = 2.4835818

[node name="NpcDummy" type="CharacterBody3D" node_paths=PackedStringArray("dialogue_box", "area_col", "navigation_agent", "pointer")]
collision_layer = 32
collision_mask = 0
safe_margin = 0.5
script = ExtResource("1_wfx4m")
dialogue_box = NodePath("DialogueBox")
area_col = NodePath("Area3D/CollisionShape3D")
navigation_agent = NodePath("NavigationAgent3D")
pointer = NodePath("Pointer")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2341309, 0)
shape = SubResource("CapsuleShape3D_dwd6t")

[node name="Dummy" parent="." node_paths=PackedStringArray("animationTree") instance=ExtResource("2_kfvlc")]
transform = Transform3D(-1, 0, -8.742278e-08, 0, 1, 0, 8.742278e-08, 0, -1, 0, 0, 0)
animationTree = NodePath("AnimationTree")

[node name="Skeleton3D" parent="Dummy/Rig" index="0"]
bones/0/rotation = Quaternion(0, 1.19209275e-07, 0, 1)
bones/1/position = Vector3(0, 0.3778436, 0)
bones/1/rotation = Quaternion(-1.11122646e-10, 0.043157756, 2.57241e-09, 0.9990683)
bones/2/rotation = Quaternion(-1.2390451e-17, 7.1054274e-15, -1.1209479e-16, 1)
bones/3/rotation = Quaternion(-5.451663e-18, -4.2351647e-22, -1.120948e-16, 1)
bones/4/position = Vector3(0.21200736, 0.13413203, 7.958496e-08)
bones/4/rotation = Quaternion(-0.55174345, -0.06252837, -0.6564422, 0.5106399)
bones/5/rotation = Quaternion(3.6738588e-09, -4.4353975e-08, -0.47759065, 0.8785826)
bones/7/rotation = Quaternion(-0.31671724, -0.33014342, 0.13448669, 0.8789817)
bones/8/position = Vector3(9.699541e-11, 0.09612522, -0.05750002)
bones/8/rotation = Quaternion(0.0016672832, 0.0016672823, -0.7009587, 0.71319795)
bones/9/position = Vector3(-0.21200739, 0.13413203, 8.3162696e-08)
bones/9/rotation = Quaternion(-0.61123127, 0.08266488, 0.6293898, 0.47268522)
bones/10/rotation = Quaternion(3.1046014e-08, 6.923963e-08, 0.50159943, 0.86509997)
bones/12/rotation = Quaternion(-0.31537238, 0.30431345, -0.21622361, 0.87245697)
bones/13/position = Vector3(-1.0718092e-09, 0.096125156, -0.057500023)
bones/13/rotation = Quaternion(0.004309422, 0.005075862, 0.70261043, 0.7115435)
bones/14/rotation = Quaternion(-5.80608e-11, -0.031341746, -1.880125e-09, 0.99950874)
bones/15/position = Vector3(0.17094505, 0.11358728, 1.0396902e-08)
bones/15/rotation = Quaternion(0.99144846, 0.08320186, 0.07724565, 0.064346775)
bones/16/rotation = Quaternion(0.33508307, 5.898289e-08, -2.2955307e-07, 0.9421887)
bones/17/rotation = Quaternion(-0.59011245, -0.20416738, 0.066047624, 0.7782807)
bones/18/rotation = Quaternion(1.0888638e-05, 0.9201673, -0.3915256, -2.4113997e-06)
bones/19/position = Vector3(-0.17094505, 0.11358728, 1.499408e-08)
bones/19/rotation = Quaternion(0.99374986, -0.03198754, 0.030374771, 0.102545656)
bones/20/rotation = Quaternion(0.3861313, -6.200904e-08, 2.6725215e-07, 0.92244387)
bones/21/rotation = Quaternion(-0.61887544, 0.113377884, -0.0183642, 0.7770466)
bones/22/rotation = Quaternion(-8.9349276e-05, 0.9202217, -0.39139766, 2.0291838e-05)
bones/23/position = Vector3(0.17094491, 0.2923103, 0.5758125)
bones/23/rotation = Quaternion(0.7071068, -2.2930234e-07, -4.6055156e-08, 0.7071068)
bones/24/position = Vector3(0.20218208, 0.025990263, 0.20518115)
bones/24/rotation = Quaternion(-0.7071068, -7.052851e-08, -7.0528486e-08, 0.7071068)
bones/25/position = Vector3(2.5596094e-08, 0.36283267, -2.4286129e-15)
bones/25/rotation = Quaternion(9.6579225e-09, 1.7795516e-09, 0.98571914, -0.1683977)
bones/26/position = Vector3(-1.5574136e-08, 0.21343614, -1.0534966e-08)
bones/26/rotation = Quaternion(-1.02578326e-07, 0.39108434, 0.92035484, -3.295464e-08)
bones/27/position = Vector3(2.5820137e-09, 0.16565005, -1.960292e-08)
bones/28/rotation = Quaternion(1, 1.0206753e-09, 1.9196605e-07, 1.0244548e-08)
bones/30/position = Vector3(-0.17094518, 0.2923103, 0.5758124)
bones/30/rotation = Quaternion(0.7071068, -3.82385e-08, 1.4500867e-07, 0.7071068)
bones/31/position = Vector3(-0.1709451, 0.025990263, 0.2457893)
bones/31/rotation = Quaternion(-0.7071068, -7.0528515e-08, -7.05285e-08, 0.7071068)
bones/32/position = Vector3(2.4015051e-08, 0.36283267, 2.4286129e-15)
bones/32/rotation = Quaternion(-5.8358944e-09, 6.4383693e-10, 0.9948094, 0.10175614)
bones/33/position = Vector3(5.9619847e-09, 0.21343614, -3.9266137e-09)
bones/33/rotation = Quaternion(-1.0060663e-07, 0.39108434, 0.92035484, -2.8069156e-08)
bones/34/position = Vector3(1.9620735e-08, 0.16565004, 2.8212537e-09)
bones/35/rotation = Quaternion(1, -4.058572e-09, 1.907939e-07, -6.519259e-09)
bones/37/position = Vector3(0.45350748, 1.1067611, -0.5888594)
bones/37/rotation = Quaternion(-0.7071068, -7.279511e-08, -7.279509e-08, 0.7071068)
bones/38/position = Vector3(0.5208407, 0.7679065, -0.057637356)
bones/38/rotation = Quaternion(-0.7946268, 1.2665987e-07, -0.60709834, 2.2351742e-08)
bones/39/position = Vector3(-0.45350718, 1.1067611, -0.5888596)
bones/39/rotation = Quaternion(-0.7071068, -7.279511e-08, -7.279509e-08, 0.7071068)
bones/40/position = Vector3(-0.5108437, 0.76790637, 0.059736915)
bones/40/rotation = Quaternion(-0.7582528, -1.0803343e-07, 0.6519608, 4.842878e-08)

[node name="head" parent="Dummy/Rig/Skeleton3D" index="0"]
transform = Transform3D(0.9997204, -1.4014344e-09, 0.023646597, 1.3934143e-09, 0.99999994, 3.5568645e-10, -0.023646597, -3.2263747e-10, 0.9997204, -4.303854e-09, 1.2136056, 1.5463912e-15)
visible = true

[node name="chest" parent="Dummy/Rig/Skeleton3D" index="1"]
transform = Transform3D(0.9962748, -5.1496163e-09, 0.08623532, 5.130434e-09, 0.99999994, 4.440771e-10, -0.08623532, 1.8196805e-15, 0.9962748, -2.9196552e-09, 0.9448091, 1.0572674e-15)
visible = true

[node name="Dummy_ArmLeft" parent="Dummy/Rig/Skeleton3D" index="2"]
visible = true

[node name="Dummy_ArmRight" parent="Dummy/Rig/Skeleton3D" index="3"]
visible = true

[node name="Dummy_Body" parent="Dummy/Rig/Skeleton3D" index="4"]
visible = true

[node name="Dummy_Head" parent="Dummy/Rig/Skeleton3D" index="5"]
visible = true

[node name="Dummy_LegLeft" parent="Dummy/Rig/Skeleton3D" index="6"]
visible = true

[node name="Dummy_LegRight" parent="Dummy/Rig/Skeleton3D" index="7"]
visible = true

[node name="BoneAttachment3D" parent="Dummy/Rig/Skeleton3D" index="8"]
transform = Transform3D(0.0030470956, -0.1629848, -0.98662376, -0.99991924, -0.012640231, -0.0009999018, -0.01230815, 0.98654735, -0.16301021, -0.490866, 0.618912, 0.105276294)

[node name="Physical Bone root" parent="Dummy/Rig/Skeleton3D/PhysicalBoneSimulator3D" index="0"]
transform = Transform3D(0.96592665, -0.2588161, -1.00753894e-07, -1.0430813e-07, -3.9435122e-13, -1, 0.2588161, 0.96592665, -2.6997e-08, 0, 0, 0)
body_offset = Transform3D(0.9659266, -0.25881633, -1.0075389e-07, -1.0430813e-07, -3.9435122e-13, -1, 0.25881633, 0.9659266, -2.6997025e-08, 0, 0, 0)

[node name="Physical Bone hips" parent="Dummy/Rig/Skeleton3D/PhysicalBoneSimulator3D" index="1"]
transform = Transform3D(0.9962749, 0.08623432, -2.7638617e-07, -2.7668534e-07, -8.4830205e-09, -1, -0.08623432, 0.9962749, 1.5408354e-08, -1.02644925e-07, 0.47383103, -1.4794753e-10)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.2880811e-07, 9.813176e-09, 0.09598744)
body_offset = Transform3D(0.99999994, -9.983778e-07, -2.8181572e-07, -2.8181574e-07, -8.927091e-09, -1, 9.983778e-07, 0.99999994, -8.927374e-09, -1.0175733e-07, 0.09598744, -8.9563885e-09)

[node name="Physical Bone spine" parent="Dummy/Rig/Skeleton3D/PhysicalBoneSimulator3D" index="2"]
transform = Transform3D(0.9962753, 0.086229816, -3.8372482e-07, -2.629923e-07, -1.411485e-06, -1, -0.086229816, 0.9962753, -1.3835497e-06, 2.037628e-06, 0.7568234, 3.4911538e-13)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.981843e-06, 8.816103e-08, 0.1870023)
body_offset = Transform3D(1, -5.528331e-06, -2.681149e-07, -2.6812273e-07, -1.411929e-06, -1, 5.528331e-06, 1, -1.4119304e-06, 2.0319817e-06, 0.1870023, 1.7588415e-07)

[node name="Physical Bone chest" parent="Dummy/Rig/Skeleton3D/PhysicalBoneSimulator3D" index="3"]
transform = Transform3D(0.08623543, -0.5339045, -0.84113586, -1.9794733e-07, 0.8442809, -0.5359009, 0.9962748, 0.046213802, 0.07280682, 0.10695481, 0.9895717, -0.0092797745)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.192072e-05, 0.019740295, 0.114627466)
body_offset = Transform3D(1.0430813e-07, -0.5359009, -0.84428096, -1.9839142e-07, 0.8442811, -0.53590095, 1, 2.2351742e-07, -2.2351742e-08, 0.10735663, 0.04476261, -2.192257e-05)

[node name="Physical Bone upperarm_l" parent="Dummy/Rig/Skeleton3D/PhysicalBoneSimulator3D" index="4"]
transform = Transform3D(0.18791364, 0.6953716, -0.69364756, -0.60815763, 0.6369375, 0.47376677, 0.77125406, 0.33281976, 0.5425848, 0.29866374, 1.019342, -0.08717297)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0004541023, 8.149902e-05, 0.12627181)
body_offset = Transform3D(0.9999244, 0.012129113, -0.0021654963, -0.0021989942, 0.002750963, -0.99999416, -0.0121231675, 0.9999228, 0.0027775168, -0.00018161535, 0.12627184, -0.00042670965)

[node name="Physical Bone lowerarm_l" parent="Dummy/Rig/Skeleton3D/PhysicalBoneSimulator3D" index="5"]
transform = Transform3D(-0.47717085, 0.69891846, -0.5327485, 0.07453459, 0.63621724, 0.7679012, 0.8756441, 0.32671186, -0.35567793, 0.45221645, 0.8625591, -0.10218362)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0007764938, -0.0012143743, 0.13444684)
body_offset = Transform3D(0.9999767, -0.0028051734, -0.0062665045, -0.0062324703, 0.011989705, -0.99990916, 0.0028800964, 0.9999243, 0.011972085, 6.262958e-05, 0.13445404, -0.00039756298)

[node name="Physical Bone wrist_l" parent="Dummy/Rig/Skeleton3D/PhysicalBoneSimulator3D" index="6"]
transform = Transform3D(-0.44547096, 0.69229877, -0.5676955, 0.028389955, 0.6446908, 0.7639161, 0.89484614, 0.32418558, -0.30684537, 0.54261863, 0.7380158, -0.04578031)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.1500155e-05, -4.9225957e-05, 0.038352028)
body_offset = Transform3D(0.99999946, -0.00123775, -0.0003849268, -0.00038349628, 0.0011155605, -0.9999998, 0.0012381077, 0.99999875, 0.0011152029, 9.62019e-05, 0.038352042, 6.556511e-06)

[node name="Physical Bone hand_l" parent="Dummy/Rig/Skeleton3D/PhysicalBoneSimulator3D" index="7"]
transform = Transform3D(0.264558, 0.83557504, 0.48148033, 0.00022748008, -0.4993235, 0.8664156, 0.9643698, -0.22910762, -0.13229011, 0.5332868, 0.6650792, -0.02657761)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00027979098, 0.0037133638, 0.05506607)
body_offset = Transform3D(0.9999987, -0.0014080107, -0.0010747612, -0.00022783727, 0.499324, -0.86641586, 0.0017563701, 0.86641467, 0.49932244, 0.00034420192, 0.04585588, -0.030712545)

[node name="Physical Bone upperarm_r" parent="Dummy/Rig/Skeleton3D/PhysicalBoneSimulator3D" index="8"]
transform = Transform3D(0.11349232, -0.66995317, 0.7336773, 0.49198082, 0.67945254, 0.5443337, -0.8631769, 0.2991775, 0.40671673, -0.30125862, 1.0127171, -0.03238501)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0009352203, -0.00016857349, 0.12271632)
body_offset = Transform3D(0.9999734, -0.0025818944, 0.0068680346, 0.0068734586, 0.002159737, -0.9999743, 0.002567023, 0.99999464, 0.0021776631, 9.1940165e-05, 0.12271997, -9.62615e-05)

[node name="Physical Bone lowerarm_r" parent="Dummy/Rig/Skeleton3D/PhysicalBoneSimulator3D" index="9"]
transform = Transform3D(-0.5828468, -0.6613147, 0.47217846, -0.2111109, 0.684367, 0.6979069, -0.7846795, 0.3070908, -0.5384918, -0.45169258, 0.854596, -0.008451516)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00078275154, 0.00027261797, 0.13444105)
body_offset = Transform3D(0.99991775, -0.011707157, -0.005287528, -0.0052862167, 0.00013127923, -0.9999863, 0.011707649, 0.99993175, 6.951392e-05, -6.863475e-05, 0.13444331, -0.00029110909)

[node name="Physical Bone wrist_r" parent="Dummy/Rig/Skeleton3D/PhysicalBoneSimulator3D" index="10"]
transform = Transform3D(-0.57367784, -0.6591622, 0.48620874, -0.1961159, 0.68687636, 0.69981384, -0.7952562, 0.30611444, -0.5233179, -0.5298989, 0.74039954, 0.07858664)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.001208364, 0.00013832054, 0.03792853)
body_offset = Transform3D(0.9995409, -0.012556404, 0.02758345, 0.027537256, -0.0038313717, -0.9996138, 0.012657106, 0.99991405, -0.0034837574, 0.00016334653, 0.037947685, 9.119511e-06)

[node name="Physical Bone hand_r" parent="Dummy/Rig/Skeleton3D/PhysicalBoneSimulator3D" index="11"]
transform = Transform3D(0.15024717, -0.85664433, -0.4935447, 0.0003285359, -0.4991682, 0.8665051, -0.9886485, -0.13035208, -0.07471717, -0.5182516, 0.6760183, 0.10110569)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.637535e-05, 0.006343752, 0.048684552)
body_offset = Transform3D(1.0000001, 0.00047294796, -0.000106334686, -0.000328238, 0.49916843, -0.8665052, -0.000356704, 0.86650515, 0.49916837, 1.8551946e-05, 0.03901881, -0.029798687)

[node name="Physical Bone upperleg_l" parent="Dummy/Rig/Skeleton3D/PhysicalBoneSimulator3D" index="12"]
transform = Transform3D(0.9827673, 0.07827708, -0.16745533, 0.17578231, -0.11554696, 0.9776244, 0.057176623, -0.9902129, -0.12731549, 0.18748367, 0.3839214, -0.0010790996)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0012376449, -0.00023816025, 0.10971943)
body_offset = Transform3D(0.99999934, -0.00062770396, -0.0009543374, -0.0009538857, 0.00071394444, -0.99999934, 0.00062839314, 0.9999991, 0.0007133782, -0.0011330843, 0.10972071, 0.00015911087)

[node name="Physical Bone lowerleg_l" parent="Dummy/Rig/Skeleton3D/PhysicalBoneSimulator3D" index="13"]
transform = Transform3D(0.98261416, -0.04670134, -0.17968994, 0.17663698, 0.53320676, 0.8273391, 0.057174046, -0.844695, 0.53218573, 0.22102912, 0.20735994, -0.024706107)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00049584557, 0.0009790402, 0.074223705)
body_offset = Transform3D(0.9999982, -0.0015566237, -0.001069108, -0.0010784734, -0.006031573, -0.99998116, 0.0015501529, 0.9999804, -0.0060328543, -0.00041496754, 0.07422875, -0.0005320087)

[node name="Physical Bone foot_l" parent="Dummy/Rig/Skeleton3D/PhysicalBoneSimulator3D" index="14"]
transform = Transform3D(0.9424305, -0.24209312, -0.23068523, -0.003348696, -0.6966417, 0.7174115, -0.33438534, -0.675338, -0.657347, 0.2540055, 0.08536813, -0.009867214)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0001262002, 1.0213e-05, 0.0834602)
body_offset = Transform3D(0.9999911, -0.0041604787, 0.000609681, 0.00062789023, 0.0043343604, -0.99999046, 0.004157558, 0.99998176, 0.004336506, -0.0001770407, 0.08345927, -0.00037266314)

[node name="Physical Bone upperleg_r" parent="Dummy/Rig/Skeleton3D/PhysicalBoneSimulator3D" index="15"]
transform = Transform3D(0.9981701, -0.030644463, 0.052129563, -0.057337634, -0.2058018, 0.9769125, -0.019208603, -0.9781138, -0.20718227, -0.17626847, 0.3815162, 0.037582017)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.580646e-05, -0.00046268318, 0.11241988)
body_offset = Transform3D(1, 1.1689961e-05, -5.701091e-06, -5.7141297e-06, 4.9620867e-05, -0.99999994, -1.168251e-05, 0.99999946, 4.966557e-05, -8.5160136e-05, 0.1124199, 0.00045710057)

[node name="Physical Bone lowerleg_r" parent="Dummy/Rig/Skeleton3D/PhysicalBoneSimulator3D" index="16"]
transform = Transform3D(0.998211, 0.015339998, 0.05778783, -0.056573763, 0.55502874, 0.82990515, -0.01934316, -0.8316898, 0.5549037, -0.18717194, 0.20724195, 0.020732706)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00069420243, 0.00054805813, 0.07481206)
body_offset = Transform3D(0.9999996, -0.00053252093, -0.0005745441, -0.00057674944, -0.0041727126, -0.999991, 0.00053012464, 0.99999094, -0.0041725338, -0.0006509274, 0.07481407, -0.00023626536)

[node name="Physical Bone foot_r" parent="Dummy/Rig/Skeleton3D/PhysicalBoneSimulator3D" index="17"]
transform = Transform3D(0.97938776, 0.14799343, 0.13746892, 0.0037388222, -0.6937403, 0.72021556, 0.20195492, -0.7048563, -0.67999405, -0.20257872, 0.08465984, 0.036973182)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.323225e-05, 0.00030667207, 0.084402286)
body_offset = Transform3D(0.99999315, 0.002226323, -0.0029678196, -0.0029688478, 0.00039944053, -0.99999547, -0.0022249967, 0.99999726, 0.00040555, 0.00019657612, 0.084401935, -0.0003407821)

[node name="Physical Bone head" parent="Dummy/Rig/Skeleton3D/PhysicalBoneSimulator3D" index="18"]
transform = Transform3D(0.9997204, 3.0147967e-07, 0.023647461, -2.5331974e-07, 1, -2.039575e-06, -0.023647461, 2.0330142e-06, 0.9997204, 5.5368314e-08, 1.2136036, 7.332931e-13)
joint_offset = Transform3D(1, 0, 0, 0, 0.99999964, 0, 0, 0, 0.99999964, -5.965598e-08, 2.0265577e-06, -1.41596e-09)
body_offset = Transform3D(1.0000001, 2.5471493e-07, 8.6426735e-07, -2.547132e-07, 1.0000001, -2.0399311e-06, -8.6426735e-07, 2.0399305e-06, 1.0000001, 5.965547e-08, -2.026558e-06, 1.4117747e-09)

[node name="AnimationTree" type="AnimationTree" parent="Dummy"]
tree_root = SubResource("AnimationNodeBlendTree_k0m3b")
anim_player = NodePath("../AnimationPlayer")

[node name="Area3D" type="Area3D" parent="."]
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_svb3k")
disabled = true

[node name="DialogueBox" parent="." instance=ExtResource("3_k0m3b")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.8827615, -0.43405917)
visible = false

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
target_desired_distance = 0.1

[node name="Pointer" parent="." instance=ExtResource("4_kfvlc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.6577318, 0)
visible = false

[node name="Interactable" type="Node3D" parent="." node_paths=PackedStringArray("npc_dummy")]
script = ExtResource("5_k0m3b")
npc_dummy = NodePath("..")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
[connection signal="velocity_computed" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_velocity_computed"]

[editable path="Dummy"]
[editable path="Dummy/Rig/Skeleton3D/BoneAttachment3D/pointer/pew"]
[editable path="Dummy/Rig/Skeleton3D/BoneAttachment3D/pointer/Gun_Pistol"]
